<resources>
    <string name="app_name">login</string>
    <string name="my_string">회원가입</string>
    <string name="my_name">이름</string>
    <string name="my_password">비밀번호</string>
    <string name="my_passwordcheck">비밀번호 확인</string>
    <string name="my_email">이메일</string>
    <string name="my_check">중복 확인</string>
    <string name="my_cancel">취소</string>
    <string name="my_accession">가입</string>
    <string name="my_login">로그인</string>
</resources>