<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#FFFFFF">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="65dp"
    android:text="@string/my_string"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/join_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<EditText
    android:id="@+id/join_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="24dp"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:ems="10"
    android:hint="@string/my_name"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/join_email"
    app:layout_constraintEnd_toEndOf="@+id/check_button" />

<EditText
    android:id="@+id/join_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:ems="10"
    android:hint="@string/my_password"
    android:inputType="textPassword"
    app:layout_constraintBottom_toTopOf="@+id/join_pwck"
    app:layout_constraintStart_toStartOf="@+id/join_email" />

<EditText
    android:id="@+id/join_pwck"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="267dp"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:ems="10"
    android:hint="@string/my_passwordcheck"
    android:inputType="textPassword"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@+id/join_password" />

<EditText
    android:id="@+id/join_email"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_marginEnd="6dp"
    android:layout_marginBottom="24dp"
    android:ems="10"
    android:hint="@string/my_email"
    android:inputType="textEmailAddress"
    app:layout_constraintBottom_toTopOf="@+id/join_password"
    app:layout_constraintEnd_toStartOf="@+id/check_button"
    app:layout_constraintStart_toStartOf="@+id/join_name" />

<Button
    android:id="@+id/check_button"
    style="@style/defaultButton"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginEnd="97dp"
    android:text="@string/my_check"
    app:layout_constraintBaseline_toBaselineOf="@+id/join_email"
    app:layout_constraintEnd_toEndOf="parent" />

<Button
    android:id="@+id/delete"
    style="@style/defaultButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginTop="71dp"
    android:text="@string/my_cancel"
    app:layout_constraintStart_toEndOf="@+id/join_button"
    app:layout_constraintTop_toBottomOf="@+id/join_pwck" />

<Button
    android:id="@+id/join_button"
    style="@style/defaultButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="96dp"
    android:text="@string/my_accession"
    app:layout_constraintBaseline_toBaselineOf="@+id/delete"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>